# Family-Health-Keeper

./: .env.example  .gitignore  AI_HEALTH_INSIGHTS.md  API_KEYS_SETUP.md  App.tsx  App.tsx.backup  BACKUP_GUIDE.md  BACKUP_IMPLEMENTATION.md  BACKUP_MODULE.md  BACKUP_QUICK_START.md  BACKUP_README.md  BACKUP_SUMMARY.md  BACKUP_USAGE_EXAMPLE.md  BACKUP_VISUAL_GUIDE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Dockerfile.backend  Dockerfile.frontend  EYE_CARE_ACCESS.md  EYE_CARE_TESTING.md  FINAL_OPTIMIZATION_REPORT.md  HEALTH_INSIGHTS_FIXED.md  HEALTH_INSIGHTS_FIXES.md  HEALTH_INSIGHTS_NOW_VISIBLE.md  HOW_TO_BACKUP_AND_RESTORE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NETLIFY_DEPLOYMENT.md  NETLIFY_SECRETS_FIX.md  OPTIMIZATION_SUMMARY.md  PRIVACY.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_REVIEW.md  README.md  RESTRUCTURING_SUMMARY.md  SECURITY.md  StoreTest.tsx  WHATSAPP_SHARING_FEATURE.md  constants.ts  docker-compose.yml  (+14 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
backend/: package-lock.json  package.json  schema.sql  tsconfig.json
backend_new/: .env.example  alembic.ini  pyproject.toml
backend_new/app/: main.py
backend_new/app/api/v1/: router.py
backend_new/app/api/v1/endpoints/: ai_proxy.py
backend_new/app/core/: config.py
components/: AIAssistant.tsx  AccessibleDashboard.tsx  BulkMedicationModal.tsx  CurrentMedications.tsx  CustomInsights.tsx  Dashboard.tsx  DataBackupManager.tsx  DataSearchPanel.tsx  DiabetesModule.tsx  DoctorEditModal.tsx  ErrorBoundary.tsx  ErrorLogViewer.tsx  EyeCareModule.tsx  Header.tsx  HealthInsights.tsx  (+26 more)
(+188 files in other folders)
